  Fix issue MR-225 - Tabs do not open in a panel until multiple panels are displayed.
  Fix issue MR-317 - Difficulty right-clicking on Tab
  Fix issue MR-318 - Wrong tab gets selected when tab names overflow on the tab bar
  Fix issue MR-321 - New connection panel doesn't get panel header if its the only one or is moved
  Added option to always show panel tabs

1.70 Beta 2 (2013-02-18):
  Fix issue MR-47 - Silent Installation Prompts for Language
  Fix issue MR-54 - Error When disconnecting from SSL channel RDP
  Fix issue MR-58 - Bug when duplicating connection in connection view 
  Fix issue MR-68 - Config Window Loses Options
  Fix issue MR-71 - Minimizing mRemoteNG causes temporary re-size of Putty sessions (windows)
  Fix issue MR-80 - Reconnect previous sessions
  Fix issue MR-81 - Problem Duplicating Folder w/ Sub-Folders
  Fix issue MR-85 - Microsoft .NET Framework warning
  Fix issue MR-86 - Citrix GDI+ Error when screen is locked
  Fix issue MR-96 - When pressing SHIFT+F4 to create a new connection inside a folder, the new connections doesn't inherit any properties from its parent
  Fix issue MR-101 - Collapse all folders causes a NullReferenceException
  Fix issue MR-165 - Can't close About window if it is the last tab
  Fix issue MR-166 - Inheritance button is disabled on some connections
  Fix issue MR-167 - Name and description of properties not show in inheritance list
  Fix issue MR-171 - Inherit configuration not showing friendly names for each inherit component
  Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
  Fix issue MR-174 - Trailing Space on a Hostname/IP will cause the connection not to happen.
  Fix issue MR-175 - Problem with focus when 2 or more PuTTY sessions opened
  Fix issue MR-176 - Del key while editing connection name triggers 'Delete Connection'
  Fix issue MR-178 - 3 different panels crashes all connections
  Fix issue MR-181 - Sessions on startup
  Fix issue MR-190 - Can't click on tab/session